--- a/MartineApiNet/MartineApiNet.csproj
+++ b/MartineApiNet/MartineApiNet.csproj
@@ -6,7 +6,7 @@
     <Description>C# wrapper for the Martine API</Description>
     <NeutralLanguage>en-US</NeutralLanguage>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.0.0.</AssemblyVersion>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
     <FileVersion>1.0.0</FileVersion>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>martinebot.com</PackageProjectUrl>
