--- a/MartineApiNet/MartineApiNet.csproj
+++ b/MartineApiNet/MartineApiNet.csproj
@@ -16,6 +16,9 @@
     <TargetFrameworks>net5.0;</TargetFrameworks>
     <PackageId>MartineApiNet</PackageId>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DocumentationFile>bin\Release\MartineApiNet.xml</DocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Refit" Version="6.0.94" />
